--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://cse120-2021-kristine.herokuapp.com/dashboard.css">
+<link rel="stylesheet" type="text/css" href="https://cse120-2021-kristine.herokuapp.com/css/dashboard.css">
 <title>Dashboard</title>
 </head>
 <body >
 
-<h1><center>Kristine's Dashboard</center></h1><br><br><br><br>
+<h1><center>Kristine's Dashboard</center></h1><br><br><br><br><br><br>
 <a href="https://cse120-2021-kristine.herokuapp.com/"><center><strong>Admin Page</strong></center></a><br>
 <a href="https://cse120-2021-kristine.herokuapp.com/Book.html"><center> Book Survey </center></a><br>
 <a href="https://cse120-2021-kristine.herokuapp.com/Hobby.html"><center>Hobby Survey</center></a><br>
+<img src="https://cse120-2021-kristine.herokuapp.com/images/ICON.png">
 </body>
 </html>
