--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,8 +8,7 @@
 
 <h1><center>Kristine's Dashboard</center></h1><br><br><br><br><br><br>
 <a href="https://cse120-2021-kristine.herokuapp.com/"><center><strong>Admin Page</strong></center></a><br>
-<a href="https://cse120-2021-kristine.herokuapp.com/Book.html"><center> Book Survey </center></a><br>
-<a href="https://cse120-2021-kristine.herokuapp.com/Hobby.html"><center>Hobby Survey</center></a><br>
-<img src="https://cse120-2021-kristine.herokuapp.com/images/ICON.png">
+<a href="Hobby"><center>Hobby Survey</center></a><br>
+<img src="views/ICON.png">
 </body>
 </html>
