--- a/views/Hobby.ejs
+++ b/views/Hobby.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Survey for Chesslovers!</title>
-    <link href="https://cse120-2021-kristine.herokuapp.com/css/Hobby.css" rel="stylesheet" type="text/css"/>  
+    <link href="/css/Hobby.css" rel="stylesheet" type="text/css"/>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.16.6/sweetalert2.min.css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/10.16.6/sweetalert2.min.js"></script>
@@ -20,7 +20,7 @@
         <button class="btn" onclick="goToDashboard()"><i class="fa fa-home"></i></button>
       </div>
       <div id="image">
-            <img id="img1" src="views/Pic1.jpg">
+            <img id="img1" src="/images/Pic1.jpg">
           <div id="Onlybox">
           </div> 
           <div id="Only">
@@ -74,7 +74,7 @@
               <input type="checkbox" id="Q6.4", name="playingstyle" value="Intuitive" onclick="handlePlayingStyleChange(event)"></input>
               <label for="Q6.4">Intuitive</label>
 
-              <img id="img2" src="http://localhost:8000/images/ROOKK.png">
+              <img id="img2" src="/images/ROOKK.png">
           </div>   
           <div id="Question7">
                 <label for="range" >  What is your FIDE rating?(if any) </label><br>
@@ -97,6 +97,6 @@
 
       </form>
 
-   <script src="js/Hobby.js" ></script>
+   <script src="/js/Hobby.js" ></script>
   </body>
 </html>
