--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="https://cse120-2021-kristine.herokuapp.com/css/dashboard.css">
+<link rel="stylesheet" type="text/css" href="/css/dashboard.css">
 <title>Dashboard</title>
 </head>
 <body >
 
 <h1><center>Kristine's Dashboard</center></h1><br><br><br><br><br><br>
-<a href="https://cse120-2021-kristine.herokuapp.com/"><center><strong>Admin Page</strong></center></a><br>
+<a href="admin"><center><strong>Admin Page</strong></center></a><br>
 <a href="Hobby"><center>Hobby Survey</center></a><br>
-<img src="views/ICON.png">
+<a href="Book"><center>Book Survey</center></a><br>
+<img src="/images/ICON.png">
 </body>
 </html>
